Featured Flowers complit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css link  -->
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Flower Shop</title>
 </head>
 
 <body>
+    <!-- start header section  -->
+    <header>
+        <div class="main_banner">
+            <div class="banner_info">
+                <h1>Let's make<br> beautiful flowers a<br> part of your life.</h1>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable<br> content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is<br> that it has a more-or-less normal
+                    distribution of letters.
+                </p>
+                <div>
+                    <button class="button_sty">Shop Now</button>
+                </div>
+            </div>
+            <div class="banner_img">
+                <img src="./Flower Asset/pngwing 10.png " height="750px" width="635" alt="">
+            </div>
+        </div>
+
+    </header>
+    <!-- end header section  -->
+    <main>
+        <!-- featured_flowers section start  -->
+        <section>
+            <div class="featured_flowers">
+                <h1>Our Featured Flowers</h1>
+                <p>It is a long established fact that a reader will be distracted by<br> the readable content of a page
+                    when
+                    looking at its layout.
+                </p>
+                <div class="featured_products">
+                    <div class="folors_name">
+                        <div class="featured_product">
+                            <img src="./Flower Asset/pngwing 6.png" alt="">
+                        </div>
+                        <h3>pink Flower tree </h3>
+                    </div>
+                    <div class="folors_name ">
+                        <div class="featured_product red_bg">
+                            <img src="./Flower Asset/pngwing 5.png" alt="">
+                        </div>
+                        <h3>red Flower tree </h3>
+                    </div>
+                    <div class="folors_name">
+                        <div class="featured_product yellow_bg">
+                            <img src="./Flower Asset/pngwing 7.png " alt="">
+                        </div>
+                        <h3>yellow Flower tree </h3>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- featured_flowers section end  -->
+    </main>
 
 </body>
 
