--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
             </div>
         </section>
         <!-- featured_flowers section end  -->
+        <!-- our Support section start  -->
+
+        <section>
+            <div class="supports">
+                <div class="support">
+                    <img src="./Flower Asset/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="support">
+                    <img src="./Flower Asset/Group 58.png " alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="support">
+                    <img src="./Flower Asset/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- our Support section end  -->
     </main>
 
 </body>
