--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
 
         </section>
         <!-- our Support section end  -->
+        <!-- Hot Deal section start  -->
+        <section>
+            <div class="hot_deal">
+                <div class="hot_deal_info">
+                    <h1>Hot Deal ! Sale Up To 25% <span class="off_color">Off</span> </h1>
+                    <p>It is a long established fact that a reader will be<br> distracted by the readable content of a
+                        page
+                        when looking at its layout.</p>
+                    <button class="button_sty">Sign Up</button>
+                </div>
+                <img src="./Flower Asset/pngwing 8.png" alt="">
+
+            </div>
+        </section>
+        <!-- Hot Deal section end  -->
     </main>
 
 </body>
