--- a/index.html
+++ b/index.html
@@ -100,7 +100,53 @@
             </div>
         </section>
         <!-- Hot Deal section end  -->
+        <!-- Instagram section start  -->
+        <section>
+            <div class="Instagram_all">
+                <h1>Instagram</h1>
+                <p>It is a long established fact that a reader will be distracted<br>by the readable content of a page
+                    when
+                    looking at its layout.</p>
+
+                <div class="instagram_images">
+                    <img src="./Flower Asset/Flower 01.png" alt="">
+                    <img src="./Flower Asset/Rectangle 4.png" alt="">
+                    <img src="./Flower Asset/Rectangle 5.png" alt="">
+                    <img src="./Flower Asset/Rectangle 6.png" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- Instagram section end  -->
+        <!-- Latest Deals section start  -->
+        <section>
+
+
+            <div class="Latest_Deals">
+                <div class="Latest_Deals_text">
+                    <h1>Get The Latest Deals</h1>
+                    <p>$30 coupon for first shopping</p>
+                </div>
+                <div>
+                    <input type="text" placeholder="Enter your email here....">
+                    <button class="button_sty">Subscribe </button>
+                </div>
+            </div>
+
+
+
+
+
+        </section>
+        <!-- Latest Deals section end  -->
     </main>
+    <footer>
+        <h1><span class="off_color">Flower</span> Shop</h1>
+        <p>It is a long established fact that a reader will be distracted by<br> the readable content of a page when
+            looking
+            at its layout.</p>
+        <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
+    </footer>
 
 </body>
 
