make a glary section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fab icon -->
+    <link rel="shortcut icon" href="./Flower Asset/flower.png" type="image/x-icon">
     <!-- css link  -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -85,6 +87,40 @@
 
         </section>
         <!-- our Support section end  -->
+        <!-- glary section start  -->
+        <section class="glary_section">
+
+
+            <h1>Flower Gallery</h1>
+
+            <div class="glarys_images">
+                <div class="glary_img">
+                    <img src="./Flower Asset/glary/red roge/1.jpg" alt="">
+                    <img src="./Flower Asset/glary/red roge/2.jpg" alt="">
+                    <img src="./Flower Asset/glary/red roge/3.jpg" alt="">
+                    <img src="./Flower Asset/glary/red roge/4.jpg" alt="">
+
+
+                </div>
+                <div class="glary_img">
+                    <img src="./Flower Asset/glary/white rog/1.jpg " alt="">
+                    <img src="./Flower Asset/glary/white rog/2.jpg " alt="">
+                    <img src="./Flower Asset/glary/white rog/3.jpg " alt="">
+                    <img src="./Flower Asset/glary/white rog/4.png " alt="">
+
+
+                </div>
+                <div class="glary_img">
+                    <img src="./Flower Asset/glary/dis color/1.jpg" alt="">
+                    <img src="./Flower Asset/glary/dis color/2.webp " alt="">
+                    <img src="./Flower Asset/glary/dis color/3.jpg " alt="">
+                    <img src="./Flower Asset/glary/dis color/4.jpg" alt="">
+
+
+                </div>
+            </div>
+        </section>
+        <!-- glary section end  -->
         <!-- Hot Deal section start  -->
         <section>
             <div class="hot_deal">
