--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     distribution of letters.
                 </p>
                 <div>
-                    <button class="button_sty">Shop Now</button>
+                    <button class="button_sty"><a href="">Shop Now</a></button>
                 </div>
             </div>
             <div class="banner_img">
@@ -92,6 +92,9 @@
 
 
             <h1>Flower Gallery</h1>
+            <p>May life be beautiful like a flower<br>
+                And let all relationships be fragrant like flowers
+            </p>
 
             <div class="glarys_images">
                 <div class="glary_img">
@@ -129,7 +132,7 @@
                     <p>It is a long established fact that a reader will be<br> distracted by the readable content of a
                         page
                         when looking at its layout.</p>
-                    <button class="button_sty">Sign Up</button>
+                    <button class="button_sty"><a href="">Sign Up</a></button>
                 </div>
                 <img src="./Flower Asset/pngwing 8.png" alt="">
 
@@ -165,7 +168,7 @@
                 </div>
                 <div>
                     <input type="text" placeholder="Enter your email here....">
-                    <button class="button_sty">Subscribe </button>
+                    <button class="button_sty"><a href="">Subscribe</a> </button>
                 </div>
             </div>
 
